--- a/privacy.html
+++ b/privacy.html
@@ -5,14 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Політика конфіденційності — Presidency Clock</title>
   <meta name="description" content="Політика конфіденційності сайту Presidency Clock." />
+
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Політика конфіденційності — Presidency Clock" />
+  <meta property="og:description" content="Як ми обробляємо дані користувачів." />
+  <meta property="og:url" content="https://presidencyclock.com/privacy.html" />
+  <meta property="og:image" content="https://presidencyclock.com/og-image.jpg" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Політика конфіденційності — Presidency Clock" />
+  <meta name="twitter:description" content="Файли cookie, аналітика, реклама." />
+  <meta name="twitter:image" content="https://presidencyclock.com/og-image.jpg" />
+
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header class="site-header">
-    <div class="container header-inner">
-      <h1>Політика конфіденційності</h1>
-    </div>
-  </header>
+  <header class="site-header"><div class="container header-inner"><h1>Політика конфіденційності</h1></div></header>
   <main class="container">
     <section class="card stack">
       <p>Ця політика описує, як ми обробляємо дані користувачів.</p>
@@ -30,11 +38,20 @@
       <p class="footer-links">
         <a href="index.html">Головна</a> ·
         <a href="about.html">Про нас</a> ·
-        <a href="contact.html">Контакти</a>
+        <a href="contact.html">Контакти</a> ·
+        <a href="#" onclick="pcOpenConsent();return false;">Manage cookies</a>
       </p>
       <p class="muted small">© <span id="year"></span> Presidency Clock</p>
     </div>
   </footer>
+  <script
+    src="monetization.js"
+    data-ga="G-XXXXXXXXXX"
+    data-adsense="ca-pub-XXXXXXXXXXXXXXXX"
+    data-slot-top="0000000001"
+    data-slot-infeed="0000000002"
+    data-slot-side="0000000003">
+  </script>
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
