--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
 
   <link rel="stylesheet" href="style.css" />
 </head>
+<script src="seo.js"></script>
 <body>
   <header class="site-header"><div class="container header-inner"><h1>Про нас</h1></div></header>
   <main class="container">
