--- a/index.html
+++ b/index.html
@@ -104,12 +104,9 @@
   <footer class="site-footer">
     <div class="container">
       <p class="footer-links">
-        <a href="about.html" data-i18n="about">About Us</a>
-        <span aria-hidden="true">·</span>
-        <a href="privacy.html" data-i18n="privacy">Privacy Policy</a>
-        <span aria-hidden="true">·</span>
-        <a href="contact.html" data-i18n="contact">Contact</a>
-        <span aria-hidden="true">·</span>
+        <a href="about.html" data-i18n="about">About Us</a> ·
+        <a href="privacy.html" data-i18n="privacy">Privacy Policy</a> ·
+        <a href="contact.html" data-i18n="contact">Contact</a> ·
         <a href="#" onclick="pcOpenConsent();return false;">Manage cookies</a>
       </p>
       <p class="muted small">© <span id="year"></span> Presidency Clock</p>
@@ -119,14 +116,14 @@
   <noscript>This site needs JavaScript to display the live countdown and translations.</noscript>
 
   <script src="script.js"></script>
+  <script src="seo.js"></script>
   <script
     src="monetization.js"
     data-ga="G-XXXXXXXXXX"
     data-adsense="ca-pub-XXXXXXXXXXXXXXXX"
     data-slot-top="0000000001"
     data-slot-infeed="0000000002"
-    data-slot-side="0000000003">
-  </script>
+    data-slot-side="0000000003"></script>
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
