--- a/digest.html
+++ b/digest.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>News Digest — Presidency Clock</title>
   <meta name="description" content="AI-updated news digest about US politics and Trump. Updated several times a day with headlines, summaries and sources." />
-
   <meta property="og:type" content="website" />
   <meta property="og:title" content="News Digest — Presidency Clock" />
   <meta property="og:description" content="AI-updated headlines with 4–5 sentence summaries and sources." />
   <meta property="og:url" content="https://presidencyclock.com/digest.html" />
   <meta property="og:image" content="https://presidencyclock.com/og-image.jpg" />
-
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="News Digest — Presidency Clock" />
   <meta name="twitter:description" content="Digest updated several times a day." />
   <meta name="twitter:image" content="https://presidencyclock.com/og-image.jpg" />
-
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -55,14 +51,11 @@
   </footer>
 
   <script src="script.js"></script>
-  <script
-    src="monetization.js"
+  <script src="seo.js"></script>
+  <script src="monetization.js"
     data-ga="G-XXXXXXXXXX"
     data-adsense="ca-pub-XXXXXXXXXXXXXXXX"
-    data-slot-top="0000000001"
-    data-slot-infeed="0000000002"
-    data-slot-side="0000000003">
-  </script>
-  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
+    data-slot-top="0000000001" data-slot-infeed="0000000002" data-slot-side="0000000003"></script>
+  <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
 </body>
 </html>
