--- a/presidents.html
+++ b/presidents.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Presidents by Time in Office — Presidency Clock</title>
   <meta name="description" content="Explore presidents by time in office with country tabs and sorting. Evergreen reference updated over time." />
-
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Presidents by Time in Office — Presidency Clock" />
   <meta property="og:description" content="Country tabs, sorting by days served. Evergreen dataset." />
   <meta property="og:url" content="https://presidencyclock.com/presidents.html" />
   <meta property="og:image" content="https://presidencyclock.com/og-image.jpg" />
-
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Presidents by Time in Office — Presidency Clock" />
   <meta name="twitter:description" content="Filter by country and sort by time in office." />
   <meta name="twitter:image" content="https://presidencyclock.com/og-image.jpg" />
-
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -77,14 +73,11 @@
   </footer>
 
   <script src="script.js"></script>
-  <script
-    src="monetization.js"
+  <script src="seo.js"></script>
+  <script src="monetization.js"
     data-ga="G-XXXXXXXXXX"
     data-adsense="ca-pub-XXXXXXXXXXXXXXXX"
-    data-slot-top="0000000001"
-    data-slot-infeed="0000000002"
-    data-slot-side="0000000003">
-  </script>
-  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
+    data-slot-top="0000000001" data-slot-infeed="0000000002" data-slot-side="0000000003"></script>
+  <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
 </body>
 </html>
