--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
   <meta name="twitter:title" content="Presidency Clock — Trump Countdown" />
   <meta name="twitter:description" content="Live countdown, news digest, presidents data." />
   <meta name="twitter:image" content="https://presidencyclock.com/og-image.jpg" />
+<!-- Performance hints (швидший старт з’єднань для GA/AdSense) -->
+<link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
+<link rel="preconnect" href="https://pagead2.googlesyndication.com" crossorigin>
+<link rel="preconnect" href="https://googleads.g.doubleclick.net" crossorigin>
+
+<!-- Колір адресного рядка на мобільних -->
+<meta name="theme-color" content="#0b0f18">
 
   <link rel="stylesheet" href="style.css" />
 </head>
