--- a/trump-today.html
+++ b/trump-today.html
@@ -13,6 +13,13 @@
   <meta name="twitter:title" content="Main about Trump today — Presidency Clock" />
   <meta name="twitter:description" content="Daily AI-picked Trump headline with archive." />
   <meta name="twitter:image" content="https://presidencyclock.com/og-image.jpg" />
+  <!-- Performance hints (швидший старт з’єднань для GA/AdSense) -->
+<link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
+<link rel="preconnect" href="https://pagead2.googlesyndication.com" crossorigin>
+<link rel="preconnect" href="https://googleads.g.doubleclick.net" crossorigin>
+
+<!-- Колір адресного рядка на мобільних -->
+<meta name="theme-color" content="#0b0f18">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
