--- a/digest.html
+++ b/digest.html
@@ -4,22 +4,25 @@
   <meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>News Digest — Presidency Clock</title>
   <meta name="description" content="AI-updated news digest about US politics and Trump. Updated several times a day with headlines, summaries and sources." />
+
   <meta property="og:type" content="website" />
   <meta property="og:title" content="News Digest — Presidency Clock" />
   <meta property="og:description" content="AI-updated headlines with 4–5 sentence summaries and sources." />
   <meta property="og:url" content="https://presidencyclock.com/digest.html" />
   <meta property="og:image" content="https://presidencyclock.com/og-image.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="News Digest — Presidency Clock" />
   <meta name="twitter:description" content="Digest updated several times a day." />
   <meta name="twitter:image" content="https://presidencyclock.com/og-image.jpg" />
-  <!-- Performance hints (швидший старт з’єднань для GA/AdSense) -->
-<link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
-<link rel="preconnect" href="https://pagead2.googlesyndication.com" crossorigin>
-<link rel="preconnect" href="https://googleads.g.doubleclick.net" crossorigin>
 
-<!-- Колір адресного рядка на мобільних -->
-<meta name="theme-color" content="#0b0f18">
+  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
+  <link rel="preconnect" href="https://pagead2.googlesyndication.com" crossorigin>
+  <link rel="preconnect" href="https://googleads.g.doubleclick.net" crossorigin>
+  <meta name="theme-color" content="#0b0f18">
+
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -57,9 +60,10 @@
     </div>
   </footer>
 
-  <script src="script.js"></script>
-  <script src="seo.js"></script>
-  <script src="monetization.js"
+  <script src="script.js?v=3"></script>
+  <script src="lang-router.js?v=1"></script>
+  <script src="seo.js?v=3"></script>
+  <script src="monetization.js?v=3"
     data-ga="G-XXXXXXXXXX"
     data-adsense="ca-pub-XXXXXXXXXXXXXXXX"
     data-slot-top="0000000001" data-slot-infeed="0000000002" data-slot-side="0000000003"></script>
