--- a/about.html
+++ b/about.html
@@ -4,22 +4,20 @@
   <meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Про нас — Presidency Clock</title>
   <meta name="description" content="Про проєкт Presidency Clock: лічильник терміну президентства та добірка новин." />
+
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Про нас — Presidency Clock" />
   <meta property="og:description" content="Мінімалістичний лічильник часу та новинні дайджести." />
   <meta property="og:url" content="https://presidencyclock.com/about.html" />
   <meta property="og:image" content="https://presidencyclock.com/og-image.jpg" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Про нас — Presidency Clock" />
-  <meta name="twitter:description" content="Незалежний інформаційний проєкт." />
-  <meta name="twitter:image" content="https://presidencyclock.com/og-image.jpg" />
-  <!-- Performance hints (швидший старт з’єднань для GA/AdSense) -->
-<link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
-<link rel="preconnect" href="https://pagead2.googlesyndication.com" crossorigin>
-<link rel="preconnect" href="https://googleads.g.doubleclick.net" crossorigin>
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 
-<!-- Колір адресного рядка на мобільних -->
-<meta name="theme-color" content="#0b0f18">
+  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
+  <link rel="preconnect" href="https://pagead2.googlesyndication.com" crossorigin>
+  <link rel="preconnect" href="https://googleads.g.doubleclick.net" crossorigin>
+  <meta name="theme-color" content="#0b0f18">
+
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -43,25 +41,12 @@
     </div>
   </footer>
 
-<script src="script.js?v=3"></script>
-
-<!-- новий роутер мов: саме він міняє адресу на /uk/, /es/, ... -->
-<script src="lang-router.js?v=1"></script>
-
-<!-- SEO (canonical/hreflang/JSON-LD) -->
-<script src="seo.js?v=3"></script>
-
-<!-- монетизація / кукі / GA / AdSense -->
-<script
-  src="monetization.js?v=3"
-  data-ga="G-XXXXXXXXXX"
-  data-adsense="ca-pub-XXXXXXXXXXXXXXXX"
-  data-slot-top="0000000001"
-  data-slot-infeed="0000000002"
-  data-slot-side="0000000003"></script>
-
-<script>document.getElementById('year').textContent = new Date().getFullYear();</script>
-</body>
-</html>
+  <script src="script.js?v=3"></script>
+  <script src="lang-router.js?v=1"></script>
+  <script src="seo.js?v=3"></script>
+  <script src="monetization.js?v=3"
+    data-ga="G-XXXXXXXXXX" data-adsense="ca-pub-XXXXXXXXXXXXXXXX"
+    data-slot-top="0000000001" data-slot-infeed="0000000002" data-slot-side="0000000003"></script>
+  <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
 </body>
 </html>
