--- a/contact.html
+++ b/contact.html
@@ -4,22 +4,20 @@
   <meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Контакти — Presidency Clock</title>
   <meta name="description" content="Зв'яжіться з командою Presidency Clock." />
+
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Контакти — Presidency Clock" />
   <meta property="og:description" content="Найшвидший спосіб зв’язку — email." />
   <meta property="og:url" content="https://presidencyclock.com/contact.html" />
   <meta property="og:image" content="https://presidencyclock.com/og-image.jpg" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Контакти — Presidency Clock" />
-  <meta name="twitter:description" content="Електронна пошта для зв’язку." />
-  <meta name="twitter:image" content="https://presidencyclock.com/og-image.jpg" />
-  <!-- Performance hints (швидший старт з’єднань для GA/AdSense) -->
-<link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
-<link rel="preconnect" href="https://pagead2.googlesyndication.com" crossorigin>
-<link rel="preconnect" href="https://googleads.g.doubleclick.net" crossorigin>
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 
-<!-- Колір адресного рядка на мобільних -->
-<meta name="theme-color" content="#0b0f18">
+  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
+  <link rel="preconnect" href="https://pagead2.googlesyndication.com" crossorigin>
+  <link rel="preconnect" href="https://googleads.g.doubleclick.net" crossorigin>
+  <meta name="theme-color" content="#0b0f18">
+
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -42,9 +40,10 @@
     </div>
   </footer>
 
-  <script src="script.js"></script>
-  <script src="seo.js"></script>
-  <script src="monetization.js"
+  <script src="script.js?v=3"></script>
+  <script src="lang-router.js?v=1"></script>
+  <script src="seo.js?v=3"></script>
+  <script src="monetization.js?v=3"
     data-ga="G-XXXXXXXXXX" data-adsense="ca-pub-XXXXXXXXXXXXXXXX"
     data-slot-top="0000000001" data-slot-infeed="0000000002" data-slot-side="0000000003"></script>
   <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
