--- a/trump-today.html
+++ b/trump-today.html
@@ -73,6 +73,31 @@
   <script src="script.js?v=3"></script>
   <script src="seo.js?v=3"></script>
   <script src="monetization.js?v=3"
+    <!-- Language switcher: fallback-only (?lang=...) -->
+<script>
+(function(){
+  var LANGS=["en","uk","es","fr","de","it","zh","ja"];
+  function norm(v){v=String(v||"").toLowerCase();
+    if(v==="ua")return"uk"; if(v==="us"||v==="en-us")return"en";
+    return LANGS.indexOf(v)>-1?v:"en";
+  }
+  // базовий шлях сторінки без мовного префікса
+  function basePath(){
+    var p=(location.pathname||"/").replace(/\/+$/,"")||"/";
+    var a=p.split("/").filter(Boolean); var l=a[0];
+    if(l && LANGS.indexOf(l)>-1 && l!=="en"){ return (("/"+a.slice(1).join("/"))||"/"); }
+    return p;
+  }
+  function urlWithParam(lang, base){
+    var q=base.indexOf("?")>-1; return (base==="/"?"/":base)+(q?"&":"?")+"lang="+lang;
+  }
+  function init(){
+    var sel=document.getElementById("language-select"); if(!sel) return;
+    sel.onchange=function(){ var t=norm(sel.value); location.href=urlWithParam(t, basePath()); };
+  }
+  if(document.readyState==="loading") document.addEventListener("DOMContentLoaded",init); else init();
+})();
+</script>
     data-ga="G-XXXXXXXXXX"
     data-adsense="ca-pub-XXXXXXXXXXXXXXXX"
     data-slot-top="0000000001" data-slot-infeed="0000000002" data-slot-side="0000000003"></script>
